testsuite/poke.pkl/printf-diag-2.pk
/* { dg-do compile } */

printf "%i32x", "foo"; /* { dg-error "" } */
